--- a/pom.xml
+++ b/pom.xml
@@ -2,17 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.eresh.spring.boot</groupId>
+	<artifactId>spring-boot</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>spring-boot</name>
+	<packaging>pom</packaging>
+	<description>Spring Boot</description>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.1.2.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.eresh.spring.boot</groupId>
-	<artifactId>spring-boot</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
-	<name>spring-boot</name>
-	<description>Spring Boot</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -21,9 +22,10 @@
 	<modules>
 		<module>spring-commons</module>
 		<module>spring-batch</module>
+		<module>jpa-encryption</module>
 	</modules>
 
-	<dependencies>
+	<!--<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -43,6 +45,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-	</build>
+	</build>-->
 
 </project>
